# glexercises

./: CMakeLists.txt  build.sh  compile_commands.json
exercises/1_4_0/: main.cpp
exercises/1_4_1/: main.cpp
exercises/1_4_2/: main.cpp
exercises/1_4_3/: CMakeLists.txt  main.cpp
exercises/1_5_1/: main.cpp
exercises/1_5_2/: main.cpp
exercises/1_5_3/: main.cpp
exercises/1_6_1/: main.cpp
exercises/1_6_2/: main.cpp
exercises/1_6_3/: main.cpp
exercises/1_6_4/: main.cpp
exercises/1_7_1/: main.cpp
exercises/1_7_2/: main.cpp
exercises/1_8_1/: main.cpp
exercises/1_8_2/: main.cpp
exercises/1_8_3/: main.cpp
exercises/1_9_1/: main.cpp
exercises/2_2_1/: main.cpp
exercises/2_2_2/: main.cpp
exercises/2_2_3/: main.cpp
exercises/2_3_1/: main.cpp
exercises/2_3_2/: main.cpp
exercises/2_4_1/: main.cpp
exercises/2_4_2/: main.cpp
exercises/2_4_3/: main.cpp
exercises/2_6_1/: main.cpp
exercises/3_1_1/: CMakeLists.txt  main.cpp
final/: CMakeLists.txt  main.cpp
gbuffer/: CMakeLists.txt  build.sh  geometry.shader.fs  geometry.shader.vs  lighting.shader.fs  lighting.shader.vs  main.cpp
lib/: gbuffer.hpp  graphics.hpp  initialization.hpp  input.hpp  mesh.hpp  model.hpp  transform.hpp
src/: main.cpp
